<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="15dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/folder"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/newfoldername"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <TextView
            android:id="@+id/dismiss"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:textSize="20sp"
            android:textColor="?attr/colorValue"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textSize="20sp"
            android:textColor="?attr/colorValue"
            android:layout_marginLeft="80dp"/>
        <TextView
            android:id="@+id/sure"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:textSize="20sp"
            android:textColor="?attr/colorValue" />
    </LinearLayout>
</LinearLayout>