<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folder"
        android:textSize="30sp"
        android:textColor="@color/black"/>
    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </ListView>
    <LinearLayout
        android:id="@+id/addfolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/add"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newaddfolder"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:textSize="20sp"
        android:textColor="?attr/colorValue"
        android:layout_gravity="end"/>
</LinearLayout>