<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/username" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password" />
    </LinearLayout>
<!--    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_color"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>-->
    <com.xl.projectno.widget.ProgressButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dip"
        android:textColor="@color/mb_white"
        android:textSize="25sp"
        app:pbtn_progresscolor="?attr/colorValue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/forgetpsw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forgetpsw"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create"
            android:gravity="center_vertical|right"/>
    </LinearLayout>
</LinearLayout>