<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="?attr/colorValue"
            android:textSize="15sp"/>
        <LinearLayout
            android:id="@+id/colorclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/color_no"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder"
            android:textColor="?attr/colorValue"
            android:textSize="15sp"/>
        <LinearLayout
            android:id="@+id/folderclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultfolder"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textColor="?attr/colorValue"
            android:textSize="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settocurrentinventory"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="27dp"
                android:layout_marginLeft="3dp"/>
            <com.xl.projectno.widget.MyToggleButton
                android:id="@+id/isusing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="100dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>