<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
        <ImageView
            android:id="@+id/delete"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="@drawable/delete"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingRight="50dp"/>
        <TextView
            android:id="@+id/collectboxname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/collectbox"
            android:textSize="20sp"
            android:paddingRight="20dp"
            android:gravity="right"/>
    </LinearLayout>
</LinearLayout>